--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-kit",
+  "name": "cockpit-click-to-run",
   "version": "0.1.0",
-  "description": "Scaffolding for a cockpit module",
+  "description": "Cockpit 365",
   "main": "index.js",
   "repository": "git@github.com:cockpit/starter-kit.git",
   "author": "",
