--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.0",
     "chrome-remote-interface": "^0.28.0",
